[gd_scene load_steps=11 format=3 uid="uid://b0wysm6c2nqgj"]

[ext_resource type="Script" path="res://player.gd" id="1_26y8w"]
[ext_resource type="Texture2D" uid="uid://cibuyb3pphhe8" path="res://assets/blue_1.png" id="2_aggge"]
[ext_resource type="Texture2D" uid="uid://b2cfjo54o1r4b" path="res://assets/orb.png" id="3_pmwij"]

[sub_resource type="Animation" id="Animation_pvnvm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(12, 1)]
}

[sub_resource type="Animation" id="Animation_rll8m"]
resource_name = "down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(16, 1), Vector2i(17, 1), Vector2i(18, 1), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_2gu6g"]
resource_name = "up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(16, 9), Vector2i(17, 9), Vector2i(18, 9), Vector2i(2, 10)]
}

[sub_resource type="Animation" id="Animation_cbs6n"]
resource_name = "left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(16, 4), Vector2i(16, 3), Vector2i(17, 3), Vector2i(1, 4)]
}

[sub_resource type="Animation" id="Animation_e2lji"]
resource_name = "right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(16, 16), Vector2i(16, 15), Vector2i(17, 15), Vector2i(1, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3qh4"]
_data = {
"RESET": SubResource("Animation_pvnvm"),
"down": SubResource("Animation_rll8m"),
"left": SubResource("Animation_cbs6n"),
"right": SubResource("Animation_e2lji"),
"up": SubResource("Animation_2gu6g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tia2a"]
size = Vector2(14, 14)

[node name="Player" type="Area2D"]
z_index = 10
collision_layer = 135
collision_mask = 135
script = ExtResource("1_26y8w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("2_aggge")
hframes = 32
vframes = 17
frame = 44

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 16)
collision_mask = 10
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RayCast2D")
speed_scale = 3.0
libraries = {
"": SubResource("AnimationLibrary_e3qh4")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_tia2a")

[node name="rayLongSprite2" type="Sprite2D" parent="CollisionShape2D"]
visible = false
position = Vector2(-8, -8)
texture = ExtResource("3_pmwij")
centered = false
hframes = 2

[node name="MovingDisplay" type="RichTextLabel" parent="."]
visible = false
offset_right = 151.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="RayCast2DLong" type="RayCast2D" parent="."]
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="rayLongSprite" type="Sprite2D" parent="RayCast2DLong"]
visible = false
texture = ExtResource("3_pmwij")
hframes = 2

[node name="ExitDetector" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(1, 0)
collision_mask = 64
hit_from_inside = true
collide_with_areas = true

[node name="PortalDetector" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(1, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
